<?xml version="1.0" encoding="utf-8"?>
<resources>
    <!-- Application -->
    <string name="app_name">Simple Media Scanner 2</string>

    <!-- Utility strings -->
    <string name="positive">Okay</string>
    <string name="negative">Cancel</string>

    <!-- MainActivity -->
    <string name="menu_delete_duplicated_entries">
        Delete duplicated entries
    </string>
    <string name="menu_about">About&#8230;</string>
    <string name="run_button">Run</string>
    <string name="edit_button">Edit&#8230;</string>
    <string name="delete_button">Delete</string>
    <string name="add_button">Add a directory&#8230;</string>
    <string name="run_all_button">Run all</string>
    <string name="delete_dialog_title">
        You are about to delete a directory.
    </string>
    <string name="delete_confirm_format">
        You ordered me to delete the following directory.\n\
        \n\
        Path: %1$s\n\
        \n\
        If you are okay, please push \&quot;%2$s\&quot;. If it is wrong, push
        \&quot;%3$s\&quot;.
    </string>

    <!-- EditActivity -->
    <string name="directory_label">Directory</string>
    <string name="select_label">Select&#8230;</string>
    <string name="add_schedule">Add a new schedule&#8230;</string>
    <string name="hourly">Hourly</string>
    <string name="daily">Daily</string>
    <string name="hour_minute_separator">:</string>

    <!-- AboutActivity -->
    <string name="version_title">Version</string>
    <string name="authors_website_title">Author\'s website</string>
    <string name="url">
        http://neko-daisuki.ddo.jp/~SumiTomohiko/index.html
    </string>
    <string name="license_title">License</string>
</resources>
<!--
vim: tabstop=4 shiftwidth=4 expandtab softtabstop=4
-->