<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical">
    <RadioGroup
        android:id="@+id/type_radiogroup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <RadioButton
            android:id="@+id/daily_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/daily"/>
        <RadioButton
            android:id="@+id/hourly_radio"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hourly"/>
    </RadioGroup>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center_horizontal"
        android:orientation="horizontal">
        <Spinner
            android:id="@+id/hour_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hour_minute_separator"/>
        <Spinner
            android:id="@+id/minute_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
    </LinearLayout>
</LinearLayout>
